refactoring : 사용자 예외처리로 변환