@@ -3,6 +3,7 @@ package com.example.dutchpay.service;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @Service
@@ -15,7 +16,9 @@ public class PaginationService {
         int startNumber = Math.max(currentPageNumber - (BAR_LENGTH / 2), 0);
         int endNumber = Math.min(startNumber + BAR_LENGTH, totalPages);
 
-        return IntStream.range(startNumber, endNumber).boxed().toList();
+        return IntStream.range(startNumber, endNumber)
+                .boxed()
+                .collect(Collectors.toList());
     }
 
     public int currentBarLength() {
